--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,266 @@
-streamlit
-youtube-transcript-api
-google-generativeai
+absl-py==2.1.0
+aiofiles==23.2.1
+aiohttp==3.9.4
+aiosignal==1.3.1
+altair==5.1.2
+annotated-types==0.5.0
+anyio==3.7.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
+Babel==2.14.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+clarifai==10.3.0
+clarifai-grpc==10.2.3
+click==8.1.7
+cohere==5.2.5
+colorama==0.4.6
+comm==0.2.1
+contextlib2==21.6.0
+contourpy==1.1.1
+cowsay==5.0
+cycler==0.12.1
+dataclasses-json==0.6.4
+debugpy==1.8.1
+decorator==5.1.1
+deepface==0.0.85
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+emoji==2.8.0
+exceptiongroup==1.1.2
+executing==2.0.1
+fastapi==0.104.0
+fastavro==1.9.4
+fastjsonschema==2.19.1
+ffmpy==0.3.1
+filelock==3.12.4
+fire==0.5.0
+Flask==3.0.2
+flatbuffers==23.5.26
+fonttools==4.43.1
+fpdf==1.7.2
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2023.9.2
+gast==0.5.4
+gdown==5.1.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.10
+google-api-core==2.19.0
+google-api-python-client==2.129.0
+google-auth==2.28.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+google-cloud-speech==2.31.1
+google-generativeai==0.8.3
+google-pasta==0.2.0
+google_images_download==2.8.0
+googleapis-common-protos==1.63.0
+gradio==3.50.2
+gradio_client==0.6.1
+greenlet==3.0.3
+grpcio==1.64.0
+grpcio-status==1.62.2
+gunicorn==21.2.0
+h11==0.14.0
+h5py==3.10.0
+httpcore==0.18.0
+httplib2==0.22.0
+httpx==0.25.0
+huggingface-hub==0.22.2
+idna==3.4
+importlib-resources==6.1.0
+inflect==7.0.0
+iniconfig==2.0.0
+inquirerpy==0.3.4
+ipykernel==6.29.2
+ipython==8.21.0
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.2
+json5==0.9.14
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.1.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.3
+keras==2.15.0
+kiwisolver==1.4.5
+langchain==0.1.16
+langchain-community==0.0.32
+langchain-core==0.1.42
+langchain-text-splitters==0.0.1
+langsmith==0.1.47
+libclang==16.0.6
+manifest-ml==0.0.1
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.21.1
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mediapipe==0.10.9
+mistune==3.0.2
+ml-dtypes==0.2.0
+mpmath==1.3.0
+mtcnn==0.1.1
+multidict==6.0.5
+mypy-extensions==1.0.0
+nbclient==0.9.0
+nbconvert==7.16.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+networkx==3.2.1
+nlpcloud==1.1.46
+notebook==7.1.0
+notebook_shim==0.2.4
+numpy==1.26.0
+oauthlib==3.2.2
+openai==1.17.1
+opencv-contrib-python==4.9.0.80
+opencv-python==4.9.0.80
+openlm==0.0.5
+opt-einsum==3.3.0
+orjson==3.10.0
+outcome==1.3.0.post0
+overrides==7.7.0
+packaging==23.2
+pandas==2.1.1
+pandocfilters==1.5.1
+parso==0.8.3
+pdf2image==1.16.2
+pfzy==0.3.4
+phonenumbers==8.12.55
+pillow==10.3.0
+platformdirs==4.2.0
+playsound==1.3.0
+pluggy==1.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.8
+pure-eval==0.2.2
+pyarrow==16.1.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.3.0
+pydantic_core==2.6.3
+pydeck==0.9.1
+pydub==0.25.1
+pyfiglet==1.0.1
+Pygments==2.17.2
+pyparsing==3.1.1
+PyPDF2==3.0.1
+PySocks==1.7.1
+pytest==7.4.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+python-multipart==0.0.6
+python-nmap==0.7.1
+python-rapidjson==1.16
+pytube==15.0.0
+pytz==2023.3.post1
+pywin32==306
+pywinpty==2.0.12
+PyYAML==6.0.1
+pyzmq==25.1.2
+redis==5.0.3
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+retina-face==0.0.14
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.10.6
+rsa==4.9
+safetensors==0.4.2
+schema==0.7.5
+selenium==4.18.1
+semantic-version==2.10.0
+Send2Trash==1.8.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sounddevice==0.4.6
+soupsieve==2.4.1
+SQLAlchemy==2.0.29
+sqlitedict==2.1.0
+stack-data==0.6.3
+starlette==0.27.0
+streamlit==1.35.0
+svgwrite==1.4.3
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+terminado==0.18.0
+tinycss2==1.2.1
+tokenizers==0.15.2
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.1
+transformers==4.39.3
+trio==0.24.0
+trio-websocket==0.11.1
+tritonclient==2.44.0
+types-python-dateutil==2.8.19.20240106
+types-requests==2.31.0.20240406
+typing-inspect==0.9.0
+typing_extensions==4.9.0
+tzdata==2023.3
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.2.1
+uvicorn==0.23.2
+watchdog==4.0.1
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+websockets==11.0.3
+Werkzeug==3.0.1
+wrapt==1.14.1
+wsproto==1.2.0
+yarl==1.9.4
+youtube-transcript-api==0.6.2
